force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>EventForce event record. Owns the event planning process, the client and the venue booking.</description>
    <label>Event</label>
    <labelPlural>Events</labelPlural>
    <nameField>
        <label>Event Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>