force-app/main/default/objects/Event__c/fields/Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comments__c</fullName>
    <label>Cancellation Comments</label>
    <type>LongTextArea</type>
</CustomField>