force-app/main/default/objects/Event__c/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <description>Email of the client, used as the recipient of the client reminder.</description>
    <formula>Client__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Email</label>
    <type>Email</type>
</CustomField>