force-app/main/default/objects/Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last day of the event, used to calculate the duration.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>