force-app/main/default/objects/Event__c/fields/Event_Days_Until__c.field-meta.xml
<CustomField>
    <fullName>Event_Days_Until__c</fullName>
    <description>Number of days between today and the event date. Negative for past events.</description>
    <formula>IF(ISBLANK(Event_Date__c),0,Event_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Event</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>