force-app/main/default/objects/Event__c/fields/Is_Upcoming__c.field-meta.xml
<CustomField>
    <fullName>Is_Upcoming__c</fullName>
    <description>TRUE for current and future events. Used as filter of the client reminder flow.</description>
    <formula>IF(ISBLANK(Event_Date__c),FALSE(),TODAY() &lt;= Event_Date__c)</formula>
    <label>Upcoming Event</label>
    <type>Checkbox</type>
</CustomField>