force-app/main/default/objects/Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>First day of the event, used to calculate the duration.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>