force-app/main/default/objects/Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>Draft</defaultValue>
    <description>Planning status of the event. Draft &gt; Pending Cancellation &gt; Confirmed &gt; Cancelled / Completed.</description>
    <label>Status</label>
    <picklistValues>
        <picklistValue>Draft</picklistValue>
        <picklistValue>Pending Cancellation</picklistValue>
        <picklistValue>Confirmed</picklistValue>
        <picklistValue>Cancelled</picklistValue>
        <picklistValue>Completed</picklistValue>
    </picklistValues>
    <restrictedPicklist>true</restrictedPicklist>
    <type>Picklist</type>
</CustomField>