force-app/main/default/objects/Event__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <description>Read only indicator of the event status, used on dashboards and list views.</description>
    <formula>CASE(Status__c,&quot;Draft&quot;,&quot;DRAFT - PLANNING&quot;,&quot;Pending Cancellation&quot;,&quot;CANCELLATION PENDING APPROVAL&quot;,&quot;Confirmed&quot;,&quot;CONFIRMED&quot;,&quot;Cancelled&quot;,&quot;CANCELLED&quot;,&quot;Completed&quot;,&quot;COMPLETED&quot;,&quot;UNKNOWN&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>