force-app/main/default/objects/Event__c/fields/Vendor_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Email__c</fullName>
    <description>Email of the vendor contact that is allowed to see this event (Event_Sharing_For_Vendors).</description>
    <label>Vendor Contact Email</label>
    <type>Email</type>
</CustomField>