force-app/main/default/objects/Event__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <description>Venue booked for the event. The venue is marked as Booked when the event is confirmed.</description>
    <label>Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>