force-app/main/default/objects/Event__c/validationRules/Cancellation_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>A cancelled event must always carry a cancellation reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Cancelled"), ISBLANK(Cancellation_Reason__c))</errorConditionFormula>
    <errorDisplayField>Event__c.Cancellation_Reason__c</errorDisplayField>
    <errorMessage>A cancelled event requires a cancellation reason. Complete the field before saving.</errorMessage>
    <fullName>Cancellation_Reason_Required</fullName>
</ValidationRule>