force-app/main/default/objects/Event__c/validationRules/Cancellation_Requires_Approval.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>An event can only be cancelled through the Event Cancellation Approval process.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Cancelled"), NOT(ISPICKVAL(PRIORVALUE(Status__c), "Pending Cancellation")))</errorConditionFormula>
    <errorDisplayField>Event__c.Status__c</errorDisplayField>
    <errorMessage>An event cannot be cancelled directly. Set the status to Pending Cancellation and submit the record for approval.</errorMessage>
    <fullName>Cancellation_Requires_Approval</fullName>
</ValidationRule>