force-app/main/default/objects/Event__c/validationRules/Client_Required.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Every event must be linked to a client.</description>
    <errorConditionFormula>ISBLANK(Client__c)</errorConditionFormula>
    <errorDisplayField>Event__c.Client__c</errorDisplayField>
    <errorMessage>Select the client this event is organised for.</errorMessage>
    <fullName>Client_Required</fullName>
</ValidationRule>