force-app/main/default/objects/Event__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>The end date of an event cannot be before its start date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Start_Date__c)), NOT(ISBLANK(End_Date__c)), End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Event__c.End_Date__c</errorDisplayField>
    <errorMessage>The end date of the event must be on or after the start date.</errorMessage>
    <fullName>End_Date_After_Start_Date</fullName>
</ValidationRule>