force-app/main/default/objects/Event__c/validationRules/Event_Date_Not_In_Past_For_Confirmed.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>An event can only be confirmed for today or a future date. Past events keep their data so that BatchCompleteEvents can still complete them.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Confirmed"), NOT(ISBLANK(Event_Date__c)), Event_Date__c &lt; TODAY(), OR(ISNEW(), ISCHANGED(Event_Date__c)))</errorConditionFormula>
    <errorDisplayField>Event__c.Event_Date__c</errorDisplayField>
    <errorMessage>A confirmed event cannot have a date in the past. Select today or a future date.</errorMessage>
    <fullName>Event_Date_Not_In_Past_For_Confirmed</fullName>
</ValidationRule>