force-app/main/default/objects/Event__c/validationRules/Event_Date_Required.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>The date of the event is mandatory - it drives the double booking check and the client reminder.</description>
    <errorConditionFormula>ISBLANK(Event_Date__c)</errorConditionFormula>
    <errorDisplayField>Event__c.Event_Date__c</errorDisplayField>
    <errorMessage>Enter the date of the event.</errorMessage>
    <fullName>Event_Date_Required</fullName>
</ValidationRule>