force-app/main/default/objects/Event__c/validationRules/Venue_Required_When_Confirmed.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>A venue is mandatory as soon as the event is confirmed, because the venue is booked automatically.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Confirmed"), ISBLANK(Venue__c))</errorConditionFormula>
    <errorDisplayField>Event__c.Venue__c</errorDisplayField>
    <errorMessage>Select a venue before confirming the event. A confirmed event always holds a venue.</errorMessage>
    <fullName>Venue_Required_When_Confirmed</fullName>
</ValidationRule>